--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,10 @@ devtools::install_github("yzhang3142/rpkgtutorial")
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-## basic example code
+```{r example, eval = FALSE}
+fars_summarize_years(c(2013, 2014))
+
+fars_map_state(4, 2013)
 ```
 
 ## This assessment is evaluated based on the following questions:
