--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# rpkgtutorial
+# fars
 
 This package is created as part of the assessment for the course Building R
 Packages on Coursera.
@@ -23,7 +23,7 @@ You can install rpkgtutorial from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("yzhang3142/rpkgtutorial")
+devtools::install_github("yzhang3142/fars")
 ```
 
 ## Example
